# rust-saved-messages-bot

./: .gitignore  Cargo.toml  README.md  application-local.toml  docker-compose.yml
migrations/: 20230423103228_initial-tables.sql
src/: error.rs  lib.rs  main.rs  model.rs  settings.rs  telegram.rs
src/api/: error.rs  mod.rs
src/api/controllers/: account.rs  mod.rs  test.rs
src/api/requests/: account.rs
src/api/responses/: account.rs  mod.rs  test.rs
src/api/routers/: account.rs  mod.rs  test.rs
src/http_clients/: http_client.rs  mod.rs
src/kafka_clients/: kafka_client.rs  mod.rs
src/models/: account.rs  enums.rs  mod.rs  test.rs
src/services/: account.rs  mod.rs  test.rs
src/sqlx_clients/: account.rs  mod.rs  test.rs
src/web/: mod.rs  routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
