[package]
name = "rust_saved_messages_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.8", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.6.16"
http = "0.2"
thiserror = "1.0"
tracing = "0.1.34"
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
anyhow = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ]}
dotenv = "0.15.0"

log = "0.4"
pretty_env_logger = "0.4"
nanoid = "0.4"


[dev-dependencies]
#anyhow = "1"
#httpc-test = "0.1.1"